Fix spacing for alert description and status
Using `width` doesn't work for flex-items with
flex-grow set above 0 because they will expand to
fill the space, whatever its value.

The intention for this line was always to
constrain how much these ones can grow to half the
space minus the gap between. `max-width`, which is
still honored by flex-items with `flex-grow` above
0, meaning they will expand up to that size.

--- a/app/assets/stylesheets/views/dashboard.scss
+++ b/app/assets/stylesheets/views/dashboard.scss
@@ -69,7 +69,7 @@
 
       // simulate govuk-grid-column-one-half spacing - larger screens
       @include govuk-media-query($from: tablet) {
-        width: calc(50% - #{$govuk-gutter-half});
+        max-width: calc(50% - #{$govuk-gutter-half});
       }
     }
 
